# wayland-screenlock-proxy

./: NEWS  README.md  config.h.in  config.ini  config.vapi  copyright  dbus_interfaces.vala  idle_notify.c  idle_notify.h  idle_notify.vapi  lock_wrapper.vala  meson.build  meson_options.txt  simple_lock.c  simple_lock.h  simple_lock.vapi  wayland-screenlock-proxy.service.in
debian/: README.Debian  changelog  control  copyright  watch  wayfire-plugin-screenlock-integration.install  wayland-screenlock-proxy.install
debian/upstream/: metadata
gwater-wayland/: libgwater-wayland.h  meson.build
wayfire_plugin/: meson.build  screenlock_integration.cpp  screenlock_integration.ini  screenlock_integration.xml
